gulp update on ie8. created a ie8 min file. updated the base-header. moved all previous ie8 bugfixes to it's own file.

--- a/src/components/c-featured-news-list/style.ie8.styl
+++ b/src/components/c-featured-news-list/style.ie8.styl
@@ -1,10 +1,14 @@
 // include the toolkit (a suite of variables, classes and mixins)
 @require "../../globals/css/_ietoolkit"
 
-
-.c-news-list{
-    .c-article-item.js-article-item{
+.c-featured-news-list {
+    ieoldcf();
+    width:100%;
+    float: left;
+    display: block;
+    .c-article-item {
         width: 45% !important;
     }
 }
+
 
