--- a/src/components/c-home-page-primary/style.ie8.styl
+++ b/src/components/c-home-page-primary/style.ie8.styl
@@ -1,6 +1,6 @@
 // include the toolkit (a suite of variables, classes and mixins)
 @require "../../globals/css/_ietoolkit"
 
-.c-home-page-secondary{
-    float: right !important; 
+.c-home-page-primary.l-primary{
+    width: 62% !important;
 }
