--- a/src/components/c-home-page-secondary/style.ie8.styl
+++ b/src/components/c-home-page-secondary/style.ie8.styl
@@ -1,6 +1,7 @@
 // include the toolkit (a suite of variables, classes and mixins)
 @require "../../globals/css/_ietoolkit"
 
-.c-featured-news-list {
-  ieoldcf();
+.c-home-page-secondary{
+    float: right !important;
+    
 }
