--- a/src/components/c-search-bar/style.ie8.styl
+++ b/src/components/c-search-bar/style.ie8.styl
@@ -1,21 +1,17 @@
-/*
-  @Component: Search bar
-  @Creator: Alex Foxleigh
-  @Description: Lives in the header-container component and contains the main search bar for the site
-*/
-
 // include the toolkit (a suite of variables, classes and mixins)
 @require "../../globals/css/_ietoolkit"
 
 .c-search-bar {
   ieoldcf();
   padding-right: 0;
+  height: 80px;
   &__container {
     width: 50%;
+    height: 40px;
     overflow: hidden;
   }
   input {
-    height: 20px;
+    height: 40px;
     padding-right:0;
     overflow: hidden !important;
   }
